--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = "0.27.0"
+futures-util = "0.3"
+futures-channel = "0.3"
