--- a/wasm-client/Cargo.toml
+++ b/wasm-client/Cargo.toml
@@ -12,6 +12,11 @@ js-sys = "0.3.77"
 serde = "1.0.219"
 serde_json = "1.0.140"
 wasm-bindgen = "0.2.100"
-web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "console"] }
 getrandom = { version = "0.2", features = ["js"] }
 # rand = { version = "0.8.5", default-features = false, features = ["js"] }
+web-sys = { version = "0.3", features = [
+    "Document", "Window", "HtmlInputElement", "HtmlElement",
+    "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent",
+    "console"
+] }
+wasm-bindgen-test = "0.3"
